# dsnd-dashboard-project

./: .pre-commit-config.yaml  .sesskey  pyproject.toml  requirements.txt  requirementz.txt
python-package/: setup.py
python-package/employee_events/: __init__.py  employee.py  query_base.py  sql_execution.py  team.py
report/: dashboard.py  utils.py
report/base_components/: __init__.py  base_component.py  data_table.py  dropdown.py  matplotlib_viz.py  radio.py
report/combined_components/: __init__.py  combined_component.py  form_group.py
src/: build_project_assets.py
tests/: test_employee_events.py
